syntax = "proto3";

option go_package = ".;account_svc";

package account_svc;

import "validator.proto";
import "base.proto";
import "user.proto";
import "pagination.proto";

// ---------------------------- Account Service Base Data -------------------------------------- //

message RegistrationData {
  string username = 1;
  account_svc.user_data user_data = 2;
  repeated account_svc.data role = 3;
  repeated account_svc.data access = 4;
}

message UpdateData{
  string username = 1 [(validator.field) = {string_not_empty : true}];
  account_svc.user_data user_data = 2;
}

message AccountData {
  string username = 1;
  account_svc.user_data data = 2;
  repeated account_svc.data role = 3;
  repeated account_svc.data access = 4;
}

// --------------------------- Account Registration Request and Response -------------------- //
message AccountRegistrationRequest {
  string username = 1 [(validator.field) = {string_not_empty : true}];
  string password = 2 [(validator.field) = {string_not_empty : true}];
  account_svc.user_data user_data = 3;
  repeated account_svc.data role = 4;
  repeated account_svc.data access = 5;
  repeated account_svc.data office = 6;
}

message AccountRegistrationResponse {
  account_svc.response status = 1;
  RegistrationData data = 2;
}

// ------------------------------ AccountUpdate Request and Response ----------------------- //
message AccountUpdateRequest {
  string username = 1 [(validator.field) = {string_not_empty : true}];
  account_svc.user_data data = 2;
}

message AccountUpdateResponse {
  account_svc.response status = 1;
  account_svc.user_data user_data = 2;
}

// --------------------------------- AccountSearch Request and Response ---------------------- //
message AccountSearchRequest {
  account_svc.pagination_request pagination = 1;
}

message AccountSearchResponse {
  account_svc.response status = 1;
  account_svc.pagination_meta meta = 2;
  RegistrationData data = 3;
}

// ----------------------------- AccountRemoveRole Request and Response ---------------------- //
message AccountRemoveRoleRequest {
  string username = 1 [(validator.field) = {string_not_empty : true}];
  repeated account_svc.data data = 2;
}

message AccountRemoveRoleResponse {
  account_svc.response status = 1;
}

// -------------------------------- AccountAddRole Request and Response --------------------- //
message AccountAddRoleRequest {
  string username = 1 [(validator.field) = {string_not_empty : true}];
  repeated account_svc.data data = 2;
}

message AccountAddRoleResponse {
  account_svc.response status = 1;
}

// -------------------------------- AccountAddOffice Request and Response ------------------- //
message AccountAddOfficeRequest {
  string username = 1 [(validator.field) = {string_not_empty : true}];
  repeated account_svc.data data = 2;
}

message AccountAddOfficeResponse {
  account_svc.response status = 1;
}

// -------------------------------- AccountRemoveOffice Request and Response ---------------- //
message AccountRemoveOfficeRequest {
  string username = 1 [(validator.field) = {string_not_empty : true}];
  repeated account_svc.data data = 2;
}

message AccountRemoveOfficeResponse {
  account_svc.response status = 1;
}

service EmployeeService {
  rpc AccountRegistration(AccountRegistrationRequest) returns (AccountRegistrationResponse) {};
  rpc AccountUpdate(AccountUpdateRequest) returns (AccountUpdateResponse) {};
  rpc AccountSearch(AccountSearchRequest) returns (AccountSearchResponse) {};
  rpc AccountAddRole(AccountAddRoleRequest) returns (AccountAddRoleResponse) {};
  rpc AccountRemoveRole(AccountRemoveRoleRequest) returns (AccountRemoveRoleResponse) {};
  rpc AccountAddOffice(AccountAddOfficeRequest) returns (AccountAddOfficeResponse) {};
  rpc AccountRemoveOffice(AccountRemoveOfficeRequest) returns (AccountRemoveOfficeResponse) {};
}